pkginclude_HEADERS = \
	junkie/ext.h \
	junkie/cpp.h \
	junkie/proto/ftp.h \
	junkie/proto/http.h \
	junkie/proto/cap.h \
	junkie/proto/tcp.h \
	junkie/proto/proto.h \
	junkie/proto/arp.h \
	junkie/proto/sdp.h \
	junkie/proto/udp.h \
	junkie/proto/bittorrent.h \
	junkie/proto/eth.h \
	junkie/proto/dns.h \
	junkie/proto/icmp.h \
	junkie/proto/rtp.h \
	junkie/proto/netbios.h \
	junkie/proto/ip.h \
	junkie/proto/ssl.h \
	junkie/proto/cifs.h \
	junkie/proto/mgcp.h \
	junkie/proto/rtcp.h \
	junkie/proto/sip.h \
	junkie/proto/port_muxer.h \
	junkie/tools/mutex.h \
	junkie/tools/files.h \
	junkie/tools/mallocer.h \
	junkie/tools/tempstr.h \
	junkie/tools/hash.h \
	junkie/tools/miscmacs.h \
	junkie/tools/ip_addr.h \
	junkie/tools/timeval.h \
	junkie/tools/jhash.h \
	junkie/tools/queue.h \
	junkie/tools/log.h \
	junkie/tools/redim_array.h
